# HL-TWAP-API

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPTIMIZATIONS.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: test_api.sh  verify_setup.sh
src/hl_twap_api/: __init__.py  config.py  main.py
src/hl_twap_api/api/: __init__.py  app.py  schemas.py
src/hl_twap_api/models/: __init__.py  database.py  trade.py
src/hl_twap_api/services/: __init__.py  data_processor.py  s3_fetcher.py
src/hl_twap_api/utils/: __init__.py  scheduler.py
tests/: __init__.py  conftest.py  test_api.py  test_data_processor.py
